--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,5 +13,6 @@
         <input type="text" placeholder="quote" name="quote">
         <button type="submit">Submit</button>
     </form>
+    <%= quotes %>
 </body>
 </html>
