--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,15 +4,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <p>Wu-shu Wisdom</p>
+    <h1>Wu-shu Wisdom</h1>
+    <h3 class="subtitle">Add a new quote</h3>
     <form action="/quotes" method='POST'>
         <input type="text" placeholder="name" name="name">
         <input type="text" placeholder="quote" name="quote">
         <button type="submit">Submit</button>
     </form>
-    <%= quotes %>
+    <h2 class="quote-of-the-day">Quote of the Day:</h2>
+    <ul class="each-quote">
+        <li><span class="quote-text"><%= quotes[randomIndex].quote %></span><span class="quote-name"><%=quotes[randomIndex].name %></span></li>
+        <li><span class="likes"><%=quotes.likes%></span></li>
+        <li><span class="delete" id='del'>Delete</span></li>
+    </ul>
+    <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
