--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous"/>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -17,8 +18,8 @@
     <h2 class="quote-of-the-day">Quote of the Day:</h2>
     <ul class="each-quote">
         <li><span class="quote-text"><%= quotes[randomIndex].quote %></span><span class="quote-name"><%=quotes[randomIndex].name %></span></li>
-        <li><span class="likes"><%=quotes.likes%></span></li>
-        <li><span class="delete" id='del'>Delete</span></li>
+        <li><span class="fas fa-thumbs-up quote-likes"><%=quotes[randomIndex].likes%></span></li>
+        <li><button class="delete" id='delete'>Delete</button></li>
     </ul>
     <script src="js/main.js" type="text/javascript"></script>
 </body>
