--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,10 +3,11 @@ li {
 }
 .each-quote {
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-items: center;
     flex-direction: row;
+    gap: 1em;
 }
 .quote-likes {
-    /* padding: 2em; */
+    margin: 0.5em 1em;
 }
